# tokenizer-bench

./: .gitattributes  .gitignore  Readme.md  pyproject.toml
bench/: __init__.py  __main__.py
bench/benches/: gptbpe.py  kitoken.py  llamacpp.py  meta.py  sentencepiece.py  tekken.py  tiktoken.py  tokenizers.py
bench/utils/: bench.py  timer.py
data/: mixed_input_raw.txt
generate/: __init__.py  __main__.py
generate/utils/: shuffle.py
