[project]
name = "tokenizer-bench"
description = "Benchmark for tokenizers."
version = "0.0.0"
requires-python = ">=3.12,<3.13"

authors = [{ name = "Christian Sdunek", email = "me@systemcluster.me" }]
urls = { repository = "https://github.com/Systemcluster/tokenizer-bench" }

dependencies = [
    "kitoken",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.1",
    "tiktoken>=0.9.0",
    "mistral-common>=1.5.3",
    # "gpt_bpe", # vendored
    "scipy>=1.15.2",
    "numpy",
    "rich>=13.9.4",
    "rich-argparse>=1.7.0",
    "pip>=25.0.1",
    "pywin32>=306; platform_system=='Windows'",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.3.8",
]

[tool.pdm]
distribution = false
[tool.pdm.resolution]
allow-prereleases = false
[tool.pdm.dev-dependencies]
dev = ["ruff>=0.11", "pyright>=1.1"]
[tool.rye]
dev-dependencies = ["ruff>=0.11", "pyright>=1.1"]
[tool.uv]
dev-dependencies = ["ruff>=0.11", "pyright>=1.1"]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pyright]
include = ["bench", "generate"]
exclude = ["vendor"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryComparison = "none"
reportUnknownVariableType = "none"
reportIncompatibleMethodOverride = "none"
reportMissingParameterType = "none"

[tool.ruff]
output-format = "pylint"
line-length = 120
exclude = [
    "vendor",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "ANN",
    "ASYNC",
    "SIM",
    "PIE",
    "S",
    "B",
    "A",
    "C4",
    "ERA",
    "T20",
    "PT",
    "PLC",
    "PLE",
    "PLW",
    "Q",
    "I",
    "UP",
    "DTZ",
    "RUF",
]
ignore = [
    "ERA001",
    "SIM115",
    "T201",
    "ANN401",
    "S101",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
avoid-escape = false

[tool.ruff.lint.isort]
section-order = [
    "future",
    "first-party",
    "local-folder",
    "standard-library",
    "third-party",
]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.setuptools]
py-modules = []
