[project]
name = "tokenizer-bench"
description = "Benchmark for tokenizers."
version = "0.0.0"
requires-python = ">=3.12,<3.13"

authors = [{ name = "Christian Sdunek", email = "me@systemcluster.me" }]
urls = { repository = "https://github.com/Systemcluster/tokenizer-bench" }

dependencies = [
    "kitoken",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "tiktoken>=0.12.0",
    "mistral-common>=1.10.0",
    "llama-models>=0.3.0",
    "transformers>=5.3.0",
    "blobfile",
    # "gpt_bpe", # vendored
    "scipy>=1.17.1",
    "numpy",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
    "pip>=26.0.1",
    "pywin32>=311; platform_system=='Windows'",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.3.16",
]

[tool.pdm]
distribution = false
[tool.pdm.resolution]
allow-prereleases = false
[tool.pdm.dev-dependencies]
dev = ["ruff>=0.11", "pyright>=1.1"]
[tool.rye]
dev-dependencies = ["ruff>=0.11", "pyright>=1.1"]
[tool.uv]
dev-dependencies = ["ruff>=0.11", "pyright>=1.1"]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pyright]
include = ["bench", "generate"]
exclude = ["vendor", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryComparison = "none"
reportUnknownVariableType = "none"
reportIncompatibleMethodOverride = "none"
reportMissingParameterType = "none"

[tool.ruff]
output-format = "pylint"
line-length = 120
exclude = [
    "vendor",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "ANN",
    "ASYNC",
    "SIM",
    "PIE",
    "S",
    "B",
    "A",
    "C4",
    "ERA",
    "T20",
    "PT",
    "PLC",
    "PLE",
    "PLW",
    "Q",
    "I",
    "UP",
    "DTZ",
    "RUF",
]
ignore = [
    "ERA001",
    "SIM115",
    "T201",
    "ANN401",
    "S101",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
avoid-escape = false

[tool.ruff.lint.isort]
section-order = [
    "future",
    "first-party",
    "local-folder",
    "standard-library",
    "third-party",
]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.setuptools]
py-modules = []
